--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./login.html">Login</a>
-    <a href="register.html">Signin</a>
+    <a href="./login.html" class="btn btn-primary">Login</a>
+    <a href="register.html" class="btn btn-success">Signup</a>    
 </body>
 </html>
