--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <a href="./login.html" class="btn btn-primary">Login</a>
-    <a href="register.html" class="btn btn-success">Signup</a>    
+    <div class="d-flex flex-column justify-content-center align-items-center h-100">
+        <a href="./login.html" class="btn btn-primary mb-3">Login</a>
+        <a href="register.html" class="btn btn-success">Signup</a>
+      </div>
 </body>
 </html>
