--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="d-flex flex-column justify-content-center align-items-center h-100">
-        <a href="./login.html" class="btn btn-primary mb-3">Login</a>
-        <a href="register.html" class="btn btn-success">Signup</a>
+    <div class="d-flex flex-column justify-content-center align-items-center h-100 main-container">
+        <img src="./assets/guvilogo.svg" alt="">
+            <div class="button-container d-flex flex-row">
+                <a href="./login.html" class="btn btn-primary ">Signin</a>
+                <a href="register.html" class="btn btn-success">Signup</a>
+            </div> 
       </div>
 </body>
 </html>
