--- a/login.html
+++ b/login.html
@@ -5,22 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/login.css" />
 </head>
 <body>
   <div class="container mt-5">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <div class="mb-3">
-        <label for="email" class="form-label">Email *</label>
-        <input type="email" class="form-control" id="email" required />
+    <div class="login-container">
+      <div class="text-center mb-4">
+        <img src="./assets/guvilogo.svg" alt="Logo" class="logo">
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password *</label>
-        <input type="password" class="form-control" id="password" required />
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-      <div id="loginResponse" class="mt-3 text-danger"></div>
-    </form>
+      <h3 class="text-center mb-4">Login</h3>
+      <form id="loginForm">
+        <div class="mb-3">
+          <label for="email" class="form-label">Email *</label>
+          <input type="email" class="form-control" id="email" required />
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password *</label>
+          <input type="password" class="form-control" id="password" required />
+        </div>
+        <div id="loginResponse" class="mt-3 text-danger text-center"></div>
+        <button type="submit" class="btn btn-primary w-100 login-button">Login</button>
+        
+      </form>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
