--- a/profile.html
+++ b/profile.html
@@ -5,35 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>User Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/profile.css" />
 </head>
 <body>
+  <nav class="navbar navbar-light bg-light shadow-sm px-3">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="./assets/guvilogo.svg" alt="Logo" class="logo-small me-2" />
+    </a>
+    <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
+  </nav>
+
   <div class="container mt-5">
-    <h2>User Profile</h2>
-    <form id="profileForm" class="needs-validation" novalidate>
-      <div class="mb-3">
-        <label for="name" class="form-label">Name (not editable)</label>
-        <input type="text" id="name" class="form-control" readonly />
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email (not editable)</label>
-        <input type="email" id="email" class="form-control" readonly />
-      </div>
-      <div class="mb-3">
-        <label for="age" class="form-label">Age</label>
-        <input type="number" id="age" class="form-control" />
-      </div>
-      <div class="mb-3">
-        <label for="dob" class="form-label">Date of Birth</label>
-        <input type="date" id="dob" class="form-control" />
-      </div>
-      <div class="mb-3">
-        <label for="contact" class="form-label">Contact</label>
-        <input type="text" id="contact" class="form-control" />
-      </div>
-      <button type="submit" class="btn btn-primary">Update Profile</button>
-    </form>
-    <button id="logoutBtn" class="btn btn-danger mt-3">Logout</button>
-    <div id="message" class="mt-3"></div>
+    <div class="profile-container">
+      <h3 class="text-center mb-4">User Profile</h3>
+      <form id="profileForm" class="needs-validation" novalidate>
+        <div class="mb-3">
+          <label for="name" class="form-label">Name (not editable)</label>
+          <input type="text" id="name" class="form-control" readonly />
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email (not editable)</label>
+          <input type="email" id="email" class="form-control" readonly />
+        </div>
+        <div class="mb-3">
+          <label for="age" class="form-label">Age</label>
+          <input type="number" id="age" class="form-control" required />
+        </div>
+        <div class="mb-3">
+          <label for="dob" class="form-label">Date of Birth</label>
+          <input type="date" id="dob" class="form-control" required />
+        </div>
+        <div class="mb-3">
+          <label for="contact" class="form-label">Contact</label>
+          <input type="text" id="contact" class="form-control" required />
+        </div>
+        <button type="submit" class="btn btn-primary w-100 update-button">Update Profile</button>
+      </form>
+      <div id="message" class="mt-3 text-center"></div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
