--- a/register.html
+++ b/register.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Register Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/register.css" />
 </head>
 <body>
-    <div class="container mt-5">
-        <h2>Register</h2>
-        <form id="registerForm" class="needs-validation" novalidate>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username *</label>
-                <input type="text" class="form-control" id="username" required />
-                <div class="invalid-feedback">Please enter a username.</div>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email *</label>
-                <input type="email" class="form-control" id="email" required />
-                <div class="invalid-feedback">Please enter a valid email.</div>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password *</label>
-                <input type="password" class="form-control" id="password" required minlength="6" />
-                <div class="invalid-feedback">Password must be at least 6 characters.</div>
-            </div>
-            <button type="submit" class="btn btn-success">Register</button>
-            <div id="responseMessage" class="mt-3"></div>
-        </form>
-    </div>
+  <div class="container mt-5">
+    <div class="register-container">
+      <div class="text-center mb-4">
+        <img src="./assets/guvilogo.svg" alt="Logo" class="logo-small">
+      </div>
+      <h3 class="text-center mb-4">Create an Account</h3>
 
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="./js/register.js"></script>
+      <form id="registerForm" class="needs-validation" novalidate>
+        <div class="mb-3">
+          <label for="username" class="form-label">Username *</label>
+          <input type="text" class="form-control" id="username" required />
+          <div class="invalid-feedback">Please enter a username.</div>
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email *</label>
+          <input type="email" class="form-control" id="email" required />
+          <div class="invalid-feedback">Please enter a valid email.</div>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password *</label>
+          <input type="password" class="form-control" id="password" required minlength="6" />
+          <div class="invalid-feedback">Password must be at least 6 characters.</div>
+        </div>
+        <div id="responseMessage" class="mt-3 text-danger text-center"></div>
+        <button type="submit" class="btn btn-primary w-100 register-button">Register</button>
+       
+      </form>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="./js/register.js"></script>
 </body>
 </html>
